examples/effects/handle_bad_no_with.err.expected
error: expected `with` after handle body
  --> examples/effects/handle_bad_no_with.kai:6:16
    |
  6 |   handle { 0 } 1
    |                ^
