examples/effects/handle_bad_no_with.kai
# m7a #4b negative test — `handle` requires a `with Eff { ... }`
# tail. Omitting it produces a clear "expected `with` after handle
# body" diagnostic at the next significant token.

fn main() : Int {
  handle { 0 } 1
}
